--- a/MiraiConsultMVC/Views/Home/Home.cshtml
+++ b/MiraiConsultMVC/Views/Home/Home.cshtml
@@ -109,7 +109,7 @@
             if (session != null && session == 2)
                 window.location.href = "../Patients/AskDoctor?question=" + x.value;
             else
-                window.location.href = "../Patients/similarQuestions?question=" + x.value;
+                window.location.href = "/similarQuestions/" + x.value;
             return false;
         }
         return true;
