Fixed My Activity link should be highlighted when user clicks on answered question link

--- a/MiraiConsultMVC/Views/Patients/AskDoctor.cshtml
+++ b/MiraiConsultMVC/Views/Patients/AskDoctor.cshtml
@@ -99,7 +99,7 @@
         else {
             $.ajax({
                 type: "GET",
-                url: 'GetSimilarQuestion?questionText=' + encodeURIComponent(questionText),
+                url: '../Patients/GetSimilarQuestion?questionText=' + encodeURIComponent(questionText),
                 datatype: "JSON",
                 contentType: "application/json; charset=utf-8",
                 success: function (response) {
@@ -107,8 +107,8 @@
                     for (var i = 0; i < response.length; i++) {
 
                         TextToAppend = TextToAppend + '<div class=\'ans_time_detail\'><p>' + response[i].Counts + '</p></div>' +
-                                    '<a href=\'PatientQuestionDetails/' + response[i].QuestionId + '\'>' +
-                                        '<p id=\"questionText\">' + response[i].QuestionText + '</p>' +
+                                    '<a href=\'Answers/' + response[i].QuestionId + '\'>' +
+                                        '<p id=\"questionText\" style="word-wrap: break-word;">' + response[i].QuestionText + '</p>' +
                                     '</a>' +
                                     '<hr class="hr_margin" style="margin-top:22px" />'
                     };
@@ -147,7 +147,7 @@
         else {
             $.ajax({
                 type: "GET",
-                url: 'question_Insert?questionText=' + encodeURIComponent(questionText),
+                url: '../Patients/question_Insert?questionText=' + encodeURIComponent(questionText),
                 datatype: "JSON",
                 contentType: "application/json; charset=utf-8",
                 success: function (returndata) {
