commited topics.cshtml and related functionality

--- a/MiraiConsultMVC/Content/custom.css
+++ b/MiraiConsultMVC/Content/custom.css
@@ -3971,3 +3971,10 @@ table.cust-table {
 .msg_font{
     font-size:10pt !important;
 }
+.tags_basic_prop
+{
+    position:relative;
+    float:left;
+    width:25%;
+    text-align:center;
+}
