--- a/MiraiConsultMVC/Views/Patients/similarQuestions.cshtml
+++ b/MiraiConsultMVC/Views/Patients/similarQuestions.cshtml
@@ -18,6 +18,8 @@
         <div class="custom-central-div">
             <div class="row-fluid">
                 <div style="margin-top:5%">
+                    @if(!HttpContext.Current.Request.Url.AbsoluteUri.Contains("topics"))
+                    { 
                     <div class='row-fluid span7'>
                         <textarea cols="50" id="QuestionText" name="QuestionText" rows="2" onkeyup="Count(this)" maxlength="200" onkeypress="return isEnterPress(event, this);" class="input-block-level txtQuestion_maxwidth custom-green-container">@ViewBag.Question</textarea>
                     </div>
@@ -48,13 +50,12 @@
                             </div>
                         }
                     </div>
-
                     <div class='row-fluid'>
                         <div class="span12">
                             <label class="finddoc-title">Relevant answers</label>
                         </div>
                     </div>
-
+                    }
                     <div class="margin_bottom">
                         @if (Model != null && (Model.ToList().Count != 0))
                         {
