--- a/MiraiConsultMVC/Views/Doctors/DoctorProfile.cshtml
+++ b/MiraiConsultMVC/Views/Doctors/DoctorProfile.cshtml
@@ -1020,7 +1020,7 @@
                         if (confirm("Are you sure you want to delete this qualification details?") == true) {
                             $.ajax({
                                 type: "GET",
-                                url: 'DeleteDegreeByDoctor?doctorId=' + aData[0] + '&LastSelectedDegreeID=' + aData[1] + '&university=' + university,
+                                url: '../Doctors/DeleteDegreeByDoctor?doctorId=' + aData[0] + '&LastSelectedDegreeID=' + aData[1] + '&university=' + university,
                                 datatype: "JSON",
                                 contentType: "application/json; charset=utf-8",
                                 success: function (returndata) {
@@ -1041,7 +1041,7 @@
                     if (confirm("Are you sure you want to delete this qualification details?") == true) {
                         $.ajax({
                             type: "GET",
-                            url: 'DeleteDegreeByDoctor?doctorId=' + aData[0] + '&LastSelectedDegreeID=' + aData[1] + '&university=' + aData[3],
+                            url: '../Doctors/DeleteDegreeByDoctor?doctorId=' + aData[0] + '&LastSelectedDegreeID=' + aData[1] + '&university=' + aData[3],
                             datatype: "JSON",
                             contentType: "application/json; charset=utf-8",
                             success: function (returndata) {
@@ -1062,7 +1062,7 @@
         function savedegree(doctorId, lastselecteddegreeId, selecteddegreeid, university) {
             $.ajax({
                 type: "GET",
-                url: 'UpdateDegreeByDoctor?doctorId=' + doctorId + '&LastSelectedDegreeID=' + lastselecteddegreeId + '&SelectedDegreeId=' + selecteddegreeid + '&university=' + university,
+                url: '../Doctors/UpdateDegreeByDoctor?doctorId=' + doctorId + '&LastSelectedDegreeID=' + lastselecteddegreeId + '&SelectedDegreeId=' + selecteddegreeid + '&university=' + university,
                 datatype: "JSON",
                 contentType: "application/json; charset=utf-8",
                 success: function (returndata) {
@@ -1074,7 +1074,6 @@
                     else if (returndata == 1) {
                         alert('Degree already exist.');
                     }
-                    location.reload(true);
                 }
             });
         }
@@ -1151,7 +1150,7 @@
                     if (confirm("Are you sure you want to delete this details?") == true) {
                         $.ajax({
                             type: "GET",
-                            url: 'DeleteDoctorDetailsByDoctorDetailsId?doctordetailsid=' + aData[1],
+                            url: '../Doctors/DeleteDoctorDetailsByDoctorDetailsId?doctordetailsid=' + aData[1],
                             datatype: "JSON",
                             contentType: "application/json; charset=utf-8",
                             success: function (returndata) {
@@ -1231,7 +1230,7 @@
                 if (($.trim(certification) != "" && $.trim(society) != "") || ($.trim(certification) != "" && $.trim(society) == "")) {
                     $.ajax({
                         type: "GET",
-                        url: 'UpdateDoctorDetailsByDoctorDetailsId?doctorId=' + docId + '&doctordetailsid=' + aData[1] + '&SelectedTypeId=' + certification + '&Details=' + society,
+                        url: '../Doctors/UpdateDoctorDetailsByDoctorDetailsId?doctorId=' + docId + '&doctordetailsid=' + aData[1] + '&SelectedTypeId=' + certification + '&Details=' + society,
                         datatype: "JSON",
                         contentType: "application/json; charset=utf-8",
                         success: function (returndata) {
@@ -1318,7 +1317,7 @@
                     //PageMethods.DeleteDoctorLocattonByDoctorLocationId(aData[0], onSuccess, onFailure);
                     $.ajax({
                         type: "GET",
-                        url: 'DeleteDoctorLocationByDoctorLocationId?docLocationId=' + aData[0],
+                        url: '../Doctors/DeleteDoctorLocationByDoctorLocationId?docLocationId=' + aData[0],
                         datatype: "JSON",
                         contentType: "application/json; charset=utf-8",
                         success: function (returndata) {
@@ -1418,7 +1417,7 @@
         if (validateclinicdata() && validateTelephone()) {
             $.ajax({
                 type: "GET",
-                url: 'Location_Insert?doctorid=' + doctorId + '&address=' + address + '&telephone=' + telephone + '&clinicName=' + clinicName + '&countryId=' + countryId + '&stateId=' + stateId + '&cityId=' + cityId + '&locationId=' + locationId + '&docLocationId=' + docLocationId,
+                url: '../Doctors/Location_Insert?doctorid=' + doctorId + '&address=' + address + '&telephone=' + telephone + '&clinicName=' + clinicName + '&countryId=' + countryId + '&stateId=' + stateId + '&cityId=' + cityId + '&locationId=' + locationId + '&docLocationId=' + docLocationId,
                 datatype: "JSON",
                 contentType: "application/json; charset=utf-8",
                 success: function (returndata) {
