--- a/MiraiConsultMVC/Views/admin/Report.cshtml
+++ b/MiraiConsultMVC/Views/admin/Report.cshtml
@@ -74,7 +74,7 @@
             <div class="span12 ">
                 <div class="table-responsive">
                     <table cellpadding="0" cellspacing="0" border="0" class="custom-table zebra-striped dataTable"
-                            id="report-doctor-list">
+                            id="report-doctor-list" style="table-layout:fixed">
                         <thead>
                             <tr>
                                 <th style="width: 20%">
@@ -97,7 +97,7 @@
                                 </th>
                             </tr>
                         </thead>
-                        @Html.Partial("_Report", Model);
+                        @Html.Partial("_Report", Model)
                     </table>
                 </div>
             </div>
