--- a/MiraiConsultMVC/Views/Home/Home.cshtml
+++ b/MiraiConsultMVC/Views/Home/Home.cshtml
@@ -13,8 +13,8 @@
                     </p>
                     <p class="div-title-firsts div-padding">Ask a Doctor</p>
                 </div>
-                <textarea class="input-block-level Questiontextarea div-askdoctor-padding" id="txtAreaQuestion" clientidmode="Static" runat="server" onkeyup="Count(this)"
-                          placeholder="Type your question here" rows="6" cols="15" maxlength="200" width="100%" onkeypress="return isEnterPress(event, this);"></textarea>
+                <textarea class="input-block-level Questiontextarea div-askdoctor-padding" id="txtAreaQuestion"  onkeyup="Count(this)"
+                          placeholder="Type your question here" rows="6" cols="15" maxlength="200" Width="100%" onkeypress="return isEnterPress(event, this);"></textarea>
             </div>
             <div class="row-fluid">
                 <div class="span12">
