--- a/MiraiConsultMVC/Views/Questions/DoctorQuestionDetails.cshtml
+++ b/MiraiConsultMVC/Views/Questions/DoctorQuestionDetails.cshtml
@@ -224,6 +224,7 @@
 
             $("#Image").change(function () {
                 var val = $(this).val();
+                if(val.trim()!= ""){
                 switch (val.substring(val.lastIndexOf('.') + 1).toLowerCase()) {
                     case 'gif': case 'jpg': case 'png': case 'jpeg':
                         $("#ImageValidation").html("");
@@ -231,6 +232,7 @@
                     default:
                         $("#ImageValidation").html("Supports only .jpg,.png,.gif,.jpeg formats. Please upload a file with either of these extensions.");
                         break;
+                }
                 }
             });
 
