Fixed font issue on doctorquestiondetail page and custom error page

--- a/MiraiConsultMVC/Views/Questions/DoctorQuestionDetails.cshtml
+++ b/MiraiConsultMVC/Views/Questions/DoctorQuestionDetails.cshtml
@@ -129,7 +129,7 @@
                         <div class="wrapper-bordered" id="SuccessMessagediv">
                             <div class="row-fluid">
                                 <div class="span12 alert alert-success">
-                                    <label>@ViewBag.lblSuccessMessage</label>
+                                    <label class="msg_font success_message_color">@ViewBag.lblSuccessMessage</label>
                                 </div>
                             </div>
                         </div>
