Fixed Reset Password page- needs to change after resetting

--- a/MiraiConsultMVC/Views/User/ResetPassword.cshtml
+++ b/MiraiConsultMVC/Views/User/ResetPassword.cshtml
@@ -9,9 +9,8 @@
                 </div>
             </div>
         </div>
-        <div class="custom-green-container custom-equal-padding gray-border">
             <div class="row-fluid">
-                <div class="span12 btn-padding-left controls-right-padding">
+                <div class="span12 controls-right-padding">
                     @if (!String.IsNullOrEmpty(ViewBag.errorMsg))
                     {
                         <div id="message" class="alert alert-success">
@@ -20,53 +19,62 @@
                     }
                 </div>
             </div>
-@using  (Html.BeginForm())
-                    {
-    @Html.AntiForgeryToken()
-    @Html.ValidationSummary(true)
-            <div class="row-fluid">
-                <div class="span12">
-                    <div class="span4 btn-padding-left">
-                        <label class="required">
-                            Password:
-                        </label>
-                    </div>
-                    <div class="span8  btn-padding-left controls-right-padding">
-                        <div>
-                            @Html.TextBoxFor(m => m.Password, new { @class = "input-block-level gray-border contact_margin", type = "password", maxlength = "30", placeholder = "New Password" })
-                            @Html.ValidationMessageFor(m => m.Password, string.Empty, new { @class = "validation-summary-errors" })
+            <div class="custom-green-container custom-equal-padding gray-border" id="controlContainer">
+                <div class="row-fluid"></div>
+                <div class="span12 btn-padding-left controls-right-padding"></div>
+                @using (Html.BeginForm())
+                {
+                    @Html.AntiForgeryToken()
+                    @Html.ValidationSummary(true)
+                    <div class="row-fluid">
+                        <div class="span12">
+                            <div class="span4 btn-padding-left">
+                                <label class="required">
+                                    Password:
+                                </label>
+                            </div>
+                            <div class="span8  btn-padding-left controls-right-padding">
+                                <div>
+                                    @Html.TextBoxFor(m => m.Password, new { @class = "input-block-level gray-border contact_margin", type = "password", maxlength = "30", placeholder = "New Password" })
+                                    @Html.ValidationMessageFor(m => m.Password, string.Empty, new { @class = "validation-summary-errors" })
+                                </div>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </div>
-            <br />
-            <div class="row-fluid">
-                <div class="span12">
-                    <div class="span4 btn-padding-left">
-                        <label class="required">
-                            Confirm Password:
-                        </label>
+                    <br />
+                    <div class="row-fluid">
+                        <div class="span12">
+                            <div class="span4 btn-padding-left">
+                                <label class="required">
+                                    Confirm Password:
+                                </label>
+                            </div>
+                            <div class="span8  btn-padding-left controls-right-padding">
+                                @Html.TextBoxFor(m => m.confirmpassword, new { @class = "input-block-level gray-border contact_margin", type = "password", maxlength = "30", placeholder = "Confirm Password" })
+                                @Html.ValidationMessageFor(m => m.confirmpassword, string.Empty, new { @class = "validation-summary-errors" })
+                            </div>
+                        </div>
                     </div>
-                    <div class="span8  btn-padding-left controls-right-padding">
-                        @Html.TextBoxFor(m => m.confirmpassword, new { @class = "input-block-level gray-border contact_margin", type = "password", maxlength = "30", placeholder = "Confirm Password" })
-                        @Html.ValidationMessageFor(m => m.confirmpassword, string.Empty, new { @class = "validation-summary-errors" })
+                    <br />
+                    <div class="row-fluid">
+                        <div class="span12">
+                            <div class="span8 pull pull-right btn-padding-left">
+                                <input class="btn thanx " id="btnSubmit" type="submit" value="Submit" />
+                            </div>
+                        </div>
                     </div>
-                </div>
+                    <br />
+                }
             </div>
-            <br />
-            <div class="row-fluid">
-                <div class="span12">
-                    <div class="span8 pull pull-right btn-padding-left">
-                        <input class="btn thanx " id="btnSubmit" type="submit" value="Submit" />
-                    </div>
-                </div>
-            </div>
-            <br />
-}
         </div>
-    </div>
 </div>
 <script>
+    $(function () {
+        if ('@ViewBag.errorMsg' != null && '@ViewBag.errorMsg' != '') {
+            $('#controlContainer').css("display", "none");
+        }
+    });
+
     (function (i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
             (i[r].q = i[r].q || []).push(arguments)
