--- a/MiraiConsultMVC/Views/Home/Home.cshtml
+++ b/MiraiConsultMVC/Views/Home/Home.cshtml
@@ -60,6 +60,13 @@
         </div>
     </div>
 </div>
+@section metatags {
+    <meta property="og:title" content="MiraiConsult" />
+    <meta property="og:url" content="@ViewBag.AskmiraiUrl/Home/Home">
+    <meta property="og:image" content="@ViewBag.AskmiraiUrl/Content/image/logoImage.png" />
+    <meta property="og:description" content="Healthcare now more accessible and convenient at MiraiConsult" />
+    <meta property="og:type" content="website" />
+}
 <script src="../Scripts/jquery-1.9.1.min.js"></script>
 <script src="../Scripts/bootstrap-transition.js"></script>
 <script src="../Scripts/bootstrap-alert.js"></script>
