--- a/MiraiConsultMVC/Views/admin/Report.cshtml
+++ b/MiraiConsultMVC/Views/admin/Report.cshtml
@@ -86,13 +86,13 @@
                                 <th>
                                     <b>Location</b>
                                 </th>
-                                <th class="reporttablewidth">
+                                <th class="reporttablewidth" style="word-wrap: break-word; width: 15%;">
                                     <b>Appointments booked</b>
                                 </th>
-                                <th class="reporttablewidth">
+                                <th class="reporttablewidth" style="word-wrap: break-word; width: 15%">
                                     <b>Appointments Clicked</b>
                                 </th>
-                                <th class="reporttablewidth">
+                                <th class="reporttablewidth" style="word-wrap:break-word">
                                     <b>Avg response time (hours)</b>
                                 </th>
                             </tr>
