--- a/MiraiConsultMVC/Views/Shared/_AskmiraiMasterLayout.cshtml
+++ b/MiraiConsultMVC/Views/Shared/_AskmiraiMasterLayout.cshtml
@@ -51,7 +51,7 @@
                                  || HttpContext.Current.Request.Url.AbsoluteUri.Contains("PatientQuestionDetails") || HttpContext.Current.Request.Url.AbsoluteUri.Contains("finddoctor") || HttpContext.Current.Request.Url.AbsoluteUri.Contains("ForgotPassword") || HttpContext.Current.Request.Url.AbsoluteUri.Contains("questiondetails") || HttpContext.Current.Request.Url.AbsoluteUri.Contains("similarQuestions")
                                  || HttpContext.Current.Request.Url.AbsoluteUri.Contains("Verifyemail") || HttpContext.Current.Request.Url.AbsoluteUri.Contains("ResetPassword")
                                         || HttpContext.Current.Request.Url.AbsoluteUri.Contains("Signup-Patient") || HttpContext.Current.Request.Url.AbsoluteUri.Contains("Signup-Doctor")
-                                        || HttpContext.Current.Request.Url.AbsoluteUri.Contains("Login") || HttpContext.Current.Request.Url.AbsoluteUri.Contains("PrivacyPolicy")
+                                        || HttpContext.Current.Request.Url.AbsoluteUri.Contains("PrivacyPolicy")
                                         || HttpContext.Current.Request.Url.AbsoluteUri.Contains("termsofuse") || HttpContext.Current.Request.Url.AbsoluteUri.Contains("Contact")
                                         || HttpContext.Current.Request.Url.AbsoluteUri.Contains("HowWeWorks") || HttpContext.Current.Request.Url.AbsoluteUri.Contains("HowWeWorks")
                                         || HttpContext.Current.Request.Url.AbsoluteUri.Contains("forgotpassword"))
@@ -126,7 +126,7 @@
                                         </div>
 
                                     }
-                                    else if (HttpContext.Current.Request.Url.AbsoluteUri.Contains("/User/Login") || HttpContext.Current.Request.Url.AbsoluteUri.Contains("/Home/Contact"))
+                                    else if (HttpContext.Current.Request.Url.AbsoluteUri.Contains("Login") || HttpContext.Current.Request.Url.AbsoluteUri.Contains("/Home/Contact"))
                                     {
                                         <div class="pull-right">
                                             <ul class="nav">
