Correct the path of utility.js in all the files

--- a/MiraiConsultMVC/Views/Doctors/DoctorProfile.cshtml
+++ b/MiraiConsultMVC/Views/Doctors/DoctorProfile.cshtml
@@ -12,7 +12,7 @@
 <script src="~/Scripts/bootstrap-pagination.js"></script>
 <script src="~/Scripts/bootstrap-datepicker.js"></script>
 <script src="~/Scripts/dateofbirthvalidation.js"></script>
-<script src="~/Scripts/utility.js"></script>
+<script type="text/javascript" src="~/Content/js/utility.js"></script>
 @Scripts.Render("~/bundles/jqueryval")
 @using (Html.BeginForm("DoctorProfile", "Doctors", FormMethod.Post, new { @encType = "multipart/form-data" }))
 {
