--- a/MiraiConsultMVC/Views/Patients/InviteFriend.cshtml
+++ b/MiraiConsultMVC/Views/Patients/InviteFriend.cshtml
@@ -109,7 +109,7 @@
 }
 }
 <script type="text/javascript" src="https://connect.facebook.net/en_US/all.js"></script>
-<script type="text/javascript" src="../Scripts/utility.js"></script>
+<script type="text/javascript" src="~/Content/js/utility.js"></script>
 <script type="text/javascript">
     $(function () {
         $(".navigation li.active").removeClass("active");
