--- a/MiraiConsultMVC/Views/Patients/PatientProfile.cshtml
+++ b/MiraiConsultMVC/Views/Patients/PatientProfile.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "PatientProfile";
     Layout = "~/Views/Shared/_PatientMasterLayout.cshtml";
 }
-<script type="text/javascript" src="../Scripts/utility.js"></script>
+<script type="text/javascript" src="~/Content/js/utility.js"></script>
 @Scripts.Render("~/bundles/jqueryval")
 @using (Html.BeginForm())
 {
