--- a/MiraiConsultMVC/Views/Patients/PatientQuestionDetails.cshtml
+++ b/MiraiConsultMVC/Views/Patients/PatientQuestionDetails.cshtml
@@ -340,4 +340,4 @@
     ga('send', 'pageview');
 
 </script>
-<script type="text/javascript" src="../Scripts/utility.js"></script>
+<script type="text/javascript" src="~/Content/js/utility.js"></script>
