--- a/MiraiConsultMVC/Views/Shared/_Layout.cshtml
+++ b/MiraiConsultMVC/Views/Shared/_Layout.cshtml
@@ -86,7 +86,7 @@
     <script type="text/javascript" src="../Resources/js/bootstrap-dropdown.js"></script>
     <script type="text/javascript" src="../Resources/js/jquery-ui.min.js"></script>
     <script type="text/javascript" src="../Resources/chosen/chosen.jquery.js"></script>
-    <script type="text/javascript" src="../Resources/js/utility.js"></script>
+    <script type="text/javascript" src="~/Content/js/utility.js"></script>
     @*<asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>*@
 </head>
