--- a/MiraiConsultMVC/Views/User/DoctorSignUp.cshtml
+++ b/MiraiConsultMVC/Views/User/DoctorSignUp.cshtml
@@ -9,7 +9,7 @@
 <script type="text/javascript" src="../Scripts/bootstrap.min.js"></script>
 <script type="text/javascript" src="../Scripts/google-code-prettify/prettify.js"></script>
 <script type="text/javascript" src="../Scripts/jquery-ui.min.js"></script>
-<script type="text/javascript" src="../Scripts/utility.js"></script>
+<script type="text/javascript" src="~/Content/js/utility.js"></script>
 <script src="../Scripts/bootstrap-datepicker.js"></script>
 <script src="../Scripts/dateofbirthvalidation.js"></script>
 <script src="../Content/chosen/chosen.jquery.js"></script>
