--- a/MiraiConsultMVC/Views/User/Login.cshtml
+++ b/MiraiConsultMVC/Views/User/Login.cshtml
@@ -3,7 +3,7 @@
 <script type="text/javascript" src="../Scripts/bootstrap.min.js"></script>
 <script type="text/javascript" src="../Scripts/google-code-prettify/prettify.js"></script>
 <script type="text/javascript" src="../Scripts/jquery-ui.min.js"></script>
-<script type="text/javascript" src="../Scripts/utility.js"></script>
+<script type="text/javascript" src="~/Content/js/utility.js"></script>
 @Scripts.Render("~/bundles/jqueryval")
 <div class="row-fluid">
     <div>
