--- a/MiraiConsultMVC/Views/Feed/Feed.cshtml
+++ b/MiraiConsultMVC/Views/Feed/Feed.cshtml
@@ -29,7 +29,7 @@
             </div>
         </div>
         <script type="text/javascript" src="https://connect.facebook.net/en_US/all.js"></script>
-        <script src="~/Scripts/utility.js"></script>
+        <script type="text/javascript" src="~/Content/js/utility.js"></script>
         <script type="text/javascript">
             var indexoF;
             $(function () {
