--- a/MiraiConsultMVC/Views/Shared/_AskmiraiMasterLayout.cshtml
+++ b/MiraiConsultMVC/Views/Shared/_AskmiraiMasterLayout.cshtml
@@ -32,7 +32,7 @@
     <script type="text/javascript" src="../Scripts/bootstrap-dropdown.js"></script>
     <script type="text/javascript" src="../Scripts/jquery-ui.min.js"></script>
     <script type="text/javascript" src="../Content/chosen/chosen.jquery.js"></script>
-    <script type="text/javascript" src="../Scripts/utility.js"></script>
+    <script type="text/javascript" src="~/Content/js/utility.js"></script>
     @*<asp:ContentPlaceHolder ID="head" runat="server">
         </asp:ContentPlaceHolder>*@
 </head>
