--- a/MiraiConsultMVC/Views/Shared/_PatientMasterLayout.cshtml
+++ b/MiraiConsultMVC/Views/Shared/_PatientMasterLayout.cshtml
@@ -23,7 +23,7 @@
     <script type="text/javascript" src="../Scripts/bootstrap.min.js"></script>
     <script type="text/javascript" src="../Scripts/google-code-prettify/prettify.js"></script>
     <script type="text/javascript" src="../Scripts/jquery-ui.min.js"></script>
-    <script type="text/javascript" src="../Scripts/utility.js"></script>
+    <script type="text/javascript" src="~/Content/js/utility.js"></script>
     <script type='text/javascript'>
         //<![CDATA[
         $(function () {
