--- a/MiraiConsultMVC/Views/Home/topicdetails.cshtml
+++ b/MiraiConsultMVC/Views/Home/topicdetails.cshtml
@@ -18,41 +18,6 @@
         <div class="custom-central-div">
             <div class="row-fluid">
                 <div style="margin-top:5%">
-                    <div class='row-fluid span7'>
-                        <textarea cols="50" id="QuestionText" name="QuestionText" rows="2" onkeyup="Count(this)" maxlength="200" onkeypress="return isEnterPress(event, this);" class="input-block-level txtQuestion_maxwidth custom-green-container">@ViewBag.Question</textarea>
-                    </div>
-                    <div class="row-fluid">
-                        <div class="span3">
-                            @if (ViewBag.Count != null)
-                            {
-                                <label id="count" class="control-label count_align" style="text-align:left">@ViewBag.Count</label>
-                            }
-                            else
-                            {
-                                <label id="count" class="control-label count_align" style="text-align:left">0/200</label>
-                            }
-                        </div>
-                    </div>
-                    <div class='row-fluid similarquestions_title_margin'>
-
-                        @if (Session["UserId"] == null && Model != null && Model.ToList().Count != 0)
-                        {
-                            <div class="span10 similarquestions_loginlink">
-                                <a href="../User/Login" class="divredirectlogin">Not Satisfied with below Answers? <strong>Send your Question to the Mirai Consult&#8482; panel of doctors</strong> </a>
-                            </div>
-                        }
-                        else if (Session["UserId"] == null && (Model == null || Model.ToList().Count == 0))
-                        {
-                            <div class="span10 similarquestions_loginlink">
-                                <a href="../User/Login" class="divredirectlogin">Send your Question to the Mirai Consult&#8482; panel of doctors</a>
-                            </div>
-                        }
-                    </div>
-                    <div class='row-fluid'>
-                        <div class="span12">
-                            <label class="finddoc-title">Relevant answers</label>
-                        </div>
-                    </div>
                     <div class="margin_bottom">
                         @if (Model != null && (Model.ToList().Count != 0))
                         {
@@ -94,8 +59,8 @@
                                         </div>
                                     }
 
-                                    <div class='span11 middle-size-padding'>
-                                        @if (!string.IsNullOrEmpty( Model.ToList()[i].answers[0].AnswerImage))
+                                    @*<div class='span11 middle-size-padding'>
+                                        @if (!string.IsNullOrEmpty(Model.ToList()[i].answers[0].AnswerImage))
                                         {
                                             <div class='span5 '>
                                                 <p class='ans_text'>@Model.ToList()[i].answers[0].AnswerText </p>
@@ -112,11 +77,11 @@
                                                 <p class='ans_text'>@Model.ToList()[i].answers[0].AnswerText</p>
                                             </div>
                                         }
-                                    </div>
+                                    </div>*@
                                 </div>
                                 if (Convert.ToInt32(Session["UserType"]) == Convert.ToInt32(UserType.Patient) && Convert.ToBoolean(Model.ToList()[i].isdocconnectuser))
                                 {
-                                    var href =(Convert.ToString(ConfigurationSettings.AppSettings["DocConnectApptUrl"])+MiraiConsultMVC.Utilities.Encrypt(Convert.ToString(Model.ToList()[i].UserId))+"&frmaskmirai=1").Trim();
+                                    var href = (Convert.ToString(ConfigurationSettings.AppSettings["DocConnectApptUrl"]) + MiraiConsultMVC.Utilities.Encrypt(Convert.ToString(Model.ToList()[i].UserId)) + "&frmaskmirai=1").Trim();
                                     <div class="span3 offset1 pull-left visible-phone">
                                         <a class='btn book_appt_button' href='href' target='_blank' onclick='bookaptclicked( "@MiraiConsultMVC.Utilities.Encrypt(Convert.ToString(Model.ToList()[i].UserId))")'>Book Appointment </a>
                                     </div>
@@ -147,7 +112,7 @@
                 var charCode = (evt.which) ? evt.which : event.keyCode
                 if (charCode == 13) {
                     var session = '@Session["UserType"]';
-                        window.location.href = "/similarQuestions/" + x.value;
+                    window.location.href = "/similarQuestions/" + x.value;
                     return false;
                 }
                 return true;
