--- a/MiraiConsultMVC/Views/Home/Home.cshtml
+++ b/MiraiConsultMVC/Views/Home/Home.cshtml
@@ -12,7 +12,9 @@
                         Do you have any health related questions?
                     </p>
                     <p class="div-title-firsts div-padding">Ask a Doctor</p>
-                </div>
+                    <p class="askQustion-css">
+                        or see <a href="/topics" class="a-askQuestion-color">answer by topic</a>
+</div>
                 <textarea class="input-block-level Questiontextarea div-askdoctor-padding" id="txtAreaQuestion"  onkeyup="Count(this)"
                           placeholder="Type your question here" rows="6" cols="15" maxlength="200" width="100%" onkeypress="return isEnterPress(event, this);"></textarea>
             </div>
@@ -31,9 +33,11 @@
             <div class="span12">
                 <div>
                     <p class="div-title-firstp div-details-margin-left">
-                        Do you have any health related questions?
+                        Do you have any health related 2questions?
                     </p>
                     <p class="div-title-firsts div-details-margin-left">Ask a Doctor</p>
+                    <p class="div-title-firstp div-details-margin-left">
+                        or see <a href="/topics">answer by topic</a>
                 </div>
                 <textarea class="input-block-level Questiontextarea questextarea div-askdoctor-padding textareadiv-margin" id="txtQuestion" onkeyup="Count(this)"
                           placeholder="Type your question here" rows="3" cols="10" maxlength="200" width="100%" onkeypress="return isEnterPress(event, this);" onpaste='return maxLengthPaste(this,"200");'></textarea>
